# TiXeL

./: .gitignore  .gitmodules  BuildConfiguration.bat  BuildProject.bat  README.md
Documentation/: TiXeL-MCP-2021.docx
Source/: TiXeL.sln
Source/Console/: Tixel.vcxproj  Tixel.vcxproj.filters  TixelMain.cpp  packages.config
Source/DataTypes/: IList.hpp  Index.hpp  IndexKey.hpp  IndexNode.hpp  Packages.config  SkipList.cpp  SkipList.hpp  SkipListMap.hpp  TixelAdt.hpp  TixelAdt.vcxproj  TixelAdt.vcxproj.filters
Source/Infrastructure/: Assert.hpp  Exception.cpp  Exception.hpp  Flags.hpp  GlobalVersionClock.cpp  GlobalVersionClock.hpp  ILock.hpp  LockBase.cpp  LockBase.hpp  Locker.cpp  Locker.hpp  NonCopyable.hpp  Protect.hpp  TixelInfra.vcxproj  TixelInfra.vcxproj.filters  TixellInfra.hpp  Trace.cpp  Trace.hpp  VersionLock.cpp  VersionLock.hpp
Source/Transactions/: GlobalVersionClock.cpp  GlobalVersionClock.hpp  SingleListOperator.hpp  TixelTxn.hpp  TixelTxn.vcxproj  TixelTxn.vcxproj.filters  TransactionDispatcher.hpp  TransactionRoutine.hpp  TxnList.hpp  TxnListOperator.hpp  TxnListStorage.hpp  TxnListTransaction.hpp
Tests/: owners.txt
Tests/Benchmark/: BenchMain.cpp  CMakeLists.txt  IntSet.cpp  IntSet.hpp  Main.cpp  TixelBench.vcxproj  TixelList.cpp  TixelList.hpp
Tests/UnitTests/: Packages.config  TixelTests.cpp  TixelTests.hpp  TixelUnitTests.vcxproj
